frontend(fix): Fix scrollbar issue

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,9 +3,17 @@
 @tailwind utilities;
 
 html,body{
-  max-width: 100vw;
-  overflow-x: hidden;
   overflow-y: scroll
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
 
 @layer base {
